Adjust mobile media query to correct header and menu crossover, footer positioning and tweaked general div positioning so that all divs are better aligned,

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,34 +180,58 @@ body {
 /* Mobile media query */
 
 @media screen and (max-width: 800px) {
+  
+  html,body{
+    overflow-x: hidden;
+  
+  }
+  
+  
+
   #menu {
-      /*float: left;*/
-      margin-bottom: 20px;
-      /*line-height: 120px;*/
       font-size: 30px;
-      padding: 20px;
-      /*margin: 0;*/
-      margin-top:50px;
       font-weight: bold;
+      padding-top:30px;
+      clear:left;
+      float: left;
+      margin-left: 0;
+      margin-bottom: 20px;
+      line-height: 25px;
   }
 
 #heading {
 font-size: 30px;
+letter-spacing: 4px;
+position: absolute;
+top:-20px;
+left:15px;
 }
 
+#header {
+  position:relative;
+}
+
+#menu {
+  position: absolute;
+  top:30px;
+  left:-40px;
+}
 #menu li {
     list-style-type: none;
-    margin-right: 40px;
-    padding:0;
-    font-size:30px;
+    margin:0;
+    padding:20px;
+    font-size:20px;
+    
 }
 
 .form-section {
   font-size:15px;
+  padding-top:150px;
+  padding-left:20px;
 }
 
 #quiz-area {
-  padding-left:30px;
+  padding-left:20px;
   padding-top: 150px;
 }
 
@@ -219,7 +243,7 @@ font-size: 30px;
   background-image: url('../images/vegetables.jpg');
   position: absolute;
   top: 450px;
-  left:-270px;
+  left:-320px;
 }
 
   #protein-portion {
@@ -232,7 +256,7 @@ font-size: 30px;
       background-size: cover;
       position: absolute;
       top: 450px;
-      left:-120px;
+      left:-170px;
   }
   
     #carb-portion {
@@ -245,7 +269,7 @@ font-size: 30px;
       background-position: center;
       background-size: cover;
       top: 600px;
-      left: -120px;
+      left: -170px;
     }
     
     #plate-area {
@@ -259,7 +283,7 @@ font-size: 30px;
 
     #page-container {
       position: relative;
-      min-height: 140vh;
+      min-height: 170vh;
     }
     
     #content-wrap {
@@ -271,11 +295,12 @@ font-size: 30px;
       display: inline;
       bottom: 0;
       width: 100%;
-      height: 2.5rem;            
+      height: 2.5rem; 
     }
 
     .social-networks {
       text-align: center;
+      padding:0;
     }
     
     .social-networks > li {
@@ -286,7 +311,7 @@ font-size: 30px;
       font-size: 160%;
       margin: 1%;
       padding: 8%;
-      padding-right: 70px;
+      padding-right: 20px;
       color: #424B54;
     }
 }
